# tanki

./: Cargo.toml  install_tanki.sh  logo.txt  readme.md  rustfmt.toml  uninstall_tanki.sh
.github/workflows/: rust.yml
src/: action.rs  anki_importer.rs  app.rs  components.rs  lib.rs  main.rs  models.rs  tui.rs
src/components/: base.rs  component.rs  home.rs  home_screen.rs  practice_screen.rs  title.rs  utils.rs
src/components/home_screen/: command_bar.rs  deck_panel.rs  input_state.rs  title.rs
src/models/: card.rs  collection.rs  deck.rs  note.rs
