[package]
name = "tanki"
version = "0.1.0"
edition = "2024"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.35", features = [
  "cargo",
  "derive",
  "string",
  "unicode",
  "unstable-styles",
  "wrap_help",
] }
color-eyre = "0.6.3"
config = "0.15.11"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
derive_deref = "1.1.1"
directories = "6.0.0"
dirs = "6.0.0"
futures = "0.3.31"
json = "0.12.4"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.172"
pretty_assertions = "1.4.1"
ratatui = "0.29.0"
rfd = "0.15.3"
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.20.0"
textwrap = "0.16.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
vergen-gix = { version = "1.0.9", features = ["build", "cargo"] }
zip = "4.0.0"
